[gd_scene load_steps=16 format=3 uid="uid://ba7xvwb1uxrd0"]

[ext_resource type="Script" path="res://scripts/random_selection_screen.gd" id="1_fckuo"]
[ext_resource type="Texture2D" uid="uid://bgurf7cqmtuoa" path="res://assets/images/taube.jpg" id="2_c28kc"]
[ext_resource type="Script" path="res://scripts/item_chain.gd" id="3_wpi73"]
[ext_resource type="AudioStream" uid="uid://bpvvuwb1bmkoa" path="res://assets/sounds/CaseClicking.mp3" id="4_1ttio"]
[ext_resource type="AudioStream" uid="uid://cmusnj5npli1p" path="res://assets/sounds/DER BESTE SKIN EVER.mp3" id="5_5rt4w"]
[ext_resource type="AudioStream" uid="uid://3smyiy34jo4g" path="res://assets/sounds/CaseOpened.mp3" id="6_cp2fp"]
[ext_resource type="Texture2D" uid="uid://cdbw1dc5e6eh4" path="res://assets/images/radial_gradient.png" id="7_fat7y"]
[ext_resource type="FontFile" uid="uid://435itcf47ohf" path="res://assets/fonts/cs_regular.ttf" id="8_7j76g"]
[ext_resource type="Texture2D" uid="uid://dgrdagdmihj5a" path="res://assets/images/napoleon.png" id="8_uxf0v"]

[sub_resource type="Gradient" id="Gradient_s2cug"]
offsets = PackedFloat32Array(0.5)
colors = PackedColorArray(1, 0.670588, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xf1ry"]
gradient = SubResource("Gradient_s2cug")
width = 360
height = 16
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="Animation" id="Animation_u0r15"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label2:label_settings:font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TextureRect2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-378, -860)]
}

[sub_resource type="Animation" id="Animation_68xut"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label2:label_settings:font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TextureRect2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-380, -860), Vector2(-190, -420)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_swkie"]
_data = {
"RESET": SubResource("Animation_u0r15"),
"fade_in": SubResource("Animation_68xut")
}

[sub_resource type="LabelSettings" id="LabelSettings_yswrj"]
font = ExtResource("8_7j76g")
font_size = 30
outline_color = Color(1, 1, 1, 0.627451)
shadow_size = 0
shadow_offset = Vector2(-3.28, 5.735)

[node name="random_selection_screen" type="Node2D"]
script = ExtResource("1_fckuo")

[node name="Taube" type="Sprite2D" parent="."]
position = Vector2(176, 400)
scale = Vector2(1.06, 2.10784)
texture = ExtResource("2_c28kc")

[node name="chain" type="Node2D" parent="."]
position = Vector2(180, 400)
script = ExtResource("3_wpi73")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="chain"]
stream = ExtResource("4_1ttio")

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="chain"]
stream = ExtResource("5_5rt4w")
volume_db = -20.0

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="chain"]
stream = ExtResource("6_cp2fp")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 298)
scale = Vector2(1, 0.25)
texture = SubResource("GradientTexture2D_xf1ry")
centered = false
offset = Vector2(0, 400)

[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(182, 401)
scale = Vector2(0.19375, 0.421875)
texture = ExtResource("7_fat7y")

[node name="item_display" type="Node2D" parent="."]
visible = false
position = Vector2(180, 400)

[node name="Napoleon" type="Sprite2D" parent="item_display"]
position = Vector2(-4, 16)
scale = Vector2(0.5, 0.39503)
texture = ExtResource("8_uxf0v")

[node name="AnimationPlayer" type="AnimationPlayer" parent="item_display"]
libraries = {
"": SubResource("AnimationLibrary_swkie")
}

[node name="TextureRect2" type="TextureRect" parent="item_display"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -378.0
offset_top = -860.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
texture = ExtResource("7_fat7y")
expand_mode = 1

[node name="Label2" type="Label" parent="item_display"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = -60.0
offset_right = 154.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
text = "Eumelcrafter"
label_settings = SubResource("LabelSettings_yswrj")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Respin" type="Button" parent="item_display"]
offset_left = -76.0
offset_top = 164.0
offset_right = 86.0
offset_bottom = 233.0
text = "Respin"

[node name="Button" type="Button" parent="item_display"]
offset_left = -76.0
offset_top = 80.0
offset_right = 86.0
offset_bottom = 149.0
text = "Daumen"

[connection signal="pressed" from="item_display/Respin" to="." method="_on_respin_pressed"]
[connection signal="pressed" from="item_display/Button" to="." method="_on_button_pressed"]
